Add new declaration, si::c-export-fname, which produces lisp compiled files with meaningful names for the exported functions. For instance, 	(proclaim '(si::c-export-fname union)) is used to produce a C function with name clLunion, which can be directly used in other compiled files. This feature has been applied to almost all functions in the Lisp runtime.

--- a/src/compile.lsp.in
+++ b/src/compile.lsp.in
@@ -8,14 +8,18 @@
 ;;;
 (in-package "COMMON-LISP-USER")
 (load "lsp/defsys.lsp")
+(proclaim '(optimize (safety 2) (space 3)))
 (sbt::operate-on-system lsp :library)
-;(sbt::operate-on-system lsp :load)
+(sbt::operate-on-system lsp :load)
+(setq si::*system-directory* (namestring (sys::chdir "./")))
+(setq compiler::*cc-flags* (concatenate 'string compiler::*cc-flags* " -I@srcdir@/h -I@srcdir@/gmp -I@builddir@/h"))
 
 #ifndef RUNTIME
 ;;;
 ;;; * Compile, load and link Common-Lisp to C compiler
 ;;;
 (load "cmp/defsys.lsp")
+(proclaim '(optimize (safety 2) (space 3)))
 (sbt::operate-on-system cmp :library)
 ;(sbt::operate-on-system cmp :load)
 #endif RUNTIME
@@ -25,6 +29,7 @@
 ;;; * Compile, load and link PCL based Common-Lisp Object System
 ;;;
 (load "clos/defsys.lsp")
+(proclaim '(optimize (safety 2) (space 3)))
 (sbt::operate-on-system clos :library)
 ;(sbt::operate-on-system clos :load)
 #endif CLOS
