--- a/src/cmp/cmpcfg.lsp.in
+++ b/src/cmp/cmpcfg.lsp.in
@@ -5,4 +5,4 @@
 (in-package "COMPILER")
 (setq compiler::*cc* "@CC@")
 (setq compiler::*cc-flags* "@CFLAGS@ -D@MACHINE@ @LSPCFLAGS@")
-(setq compiler::*ld-flags* "-lecls -lcrs -lgmp @LDFLAGS@ @CLIBS@")
+(setq compiler::*ld-flags* "-lecls -lgmp @LDFLAGS@ @CLIBS@")
