--- a/src/cmp/cmpcfg.lsp.in
+++ b/src/cmp/cmpcfg.lsp.in
@@ -6,3 +6,4 @@
 (setq compiler::*cc* "@CC@")
 (setq compiler::*cc-flags* "@CFLAGS@ -D@MACHINE@ @LSPCFLAGS@")
 (setq compiler::*ld-flags* "-lecls -lgmp @LDFLAGS@ @CLIBS@")
+(setq compiler::*ld-shared-flags* "@SHARED_LDFLAGS@")
