--- a/src/configure.in
+++ b/src/configure.in
@@ -46,109 +46,44 @@ AC_SUBST(builddir)
 AC_SUBST(top_srcdir)
 AC_SUBST(TKLIBS)
 AC_ARG_ENABLE(clos,
-	[	--disable-clos		Don't include CLOS.],
+	[  --disable-clos	  Don't include CLOS.],
 	clos=`test "$enable_clos" != "no"`, clos=1)
-AC_ARG_ENABLE(gmp,
-	[       --enable-local-gmp      Use local GMP library.],
-	gmp="$enable_local_gmp")
 AC_ARG_ENABLE(boehm,
-	[	--enable-boehm	 	Enable Boehm & Weiser's garbage collector.],
+	[  --enable-boehm	  Enable Boehm & Weiser's garbage collector.],
 	boehm="$enable_boehm")
-AC_ARG_ENABLE(profile,
-	[	--enable-profile 	Enable profiling tool.],
-	profile="$enable_profile")
-AC_ARG_ENABLE(tk,
-	[	--enable-tk		Include Tk.],
-	tk="$enable_tk")
-AC_ARG_ENABLE(clx,
-	[	--enable-clx		Include CLX.],
-	clx="$enable_clx")
+dnl AC_ARG_ENABLE(profile,
+dnl 	[  --enable-profile 	  Enable profiling tool.],
+dnl 	profile="$enable_profile")
+dnl AC_ARG_ENABLE(tk,
+dnl 	[  --enable-tk		  Include Tk.],
+dnl 	tk="$enable_tk")
+dnl AC_ARG_ENABLE(clx,
+dnl 	[  --enable-clx		  Include CLX.],
+dnl 	clx="$enable_clx")
 AC_ARG_ENABLE(tcp,
-	[	--enable-tcp		Include socket interface.],
+	[  --enable-tcp		  Include socket interface.],
 	tcp="$enable_tcp")
-AC_ARG_ENABLE(locative,
-	[	--enable-locative	Include locative support.],
-	locative="$enable_locative")
-AC_ARG_ENABLE(threads,
-	[	--enable-threads	Include the multiple thread facility.],
-	threads="$enable_threads")
-AC_ARG_ENABLE(runtime,
-	[	--enable-runtime	Build a RunTime Lisp with no compiler.],
-	runtime="$enable_runtime")
-[
-#### Make srcdir absolute, if it isn't already.  It's important to
-#### avoid running the path through pwd unnecessarily, since pwd can
-#### give you automounter prefixes, which can go away.
-case "${srcdir}" in
-  /* ) ;;
-  . )
-    ## We may be able to use the $PWD environment variable to make this
-    ## absolute.  But sometimes PWD is inaccurate.
-    if [ "${PWD}" != "" ] && [ "`(cd ${PWD} ; sh -c pwd)`" = "`pwd`" ] ; then
-      srcdir="$PWD"
-    else
-      srcdir="`(cd ${srcdir}; pwd)`"
-    fi
-  ;;
-  *  ) srcdir="`(cd ${srcdir}; pwd)`" ;;
-esac
+AC_ARG_ENABLE(gmp,
+	[  --enable-local-gmp	  Use already installed GMP library.],
+	gmp="$enable_local_gmp")
+AC_ARG_WITH(gmp,
+	[  --with-gmp[=args]	  Configure supplied GMP library with arguments.],
+	[gmp_flags=$withval; enable_local_gmp=no],
+	gmp_flags="")
+dnl AC_ARG_ENABLE(locative,
+dnl 	[  --enable-locative	  Include locative support.],
+dnl 	locative="$enable_locative")
+dnl AC_ARG_ENABLE(threads,
+dnl 	[  --enable-threads	  Include the multiple thread facility.],
+dnl 	threads="$enable_threads")
+dnl AC_ARG_ENABLE(runtime,
+dnl 	[  --enable-runtime	  Build a RunTime Lisp with no compiler.],
+dnl 	runtime="$enable_runtime")
 
-### Guess the operating system
-case $host_os in
-	linux*)
-		host="linux"
-		;;
-	freebsd*)
-		host="freebsd"
-		;;
-	netbsd*)
-		host="netbsd"
-		;;
-	solaris*)
-		host="sun4sol2"
-		;;
-	*)
-		host="$host_os"
-		;;
-esac
-
-### Establish some default values.
-
-if test "x$prefix" = "xNONE"; then prefix=${ac_default_prefix}; fi
-if test "x$exec_prefix" = "xNONE"; then exec_prefix=${prefix}; fi
-bindir="${exec_prefix}/bin"
-libdir="${exec_prefix}/lib/ecls"
-mandir="${prefix}/man/man1"
-infodir="${prefix}/info"
-builddir=`pwd`
-
-if [ $profile ] ; then
- if [ ${host} = linux ] ; then
- LIBS="${LIBS} -lgmon"
- fi
-fi
-if [ $tk ] ; then
- TKLIBS="-ltk -ltcl -lXpm @XLIBS@"
-fi
-
-]
 ### ----------------------------------------------------------------------
-###		Set options
+###           Checks for programs
 ###
-test "${boehm}" && AC_DEFINE(GBC_BOEHM)
-test "${clos}" && AC_DEFINE(CLOS)
-test "${tk}" && AC_DEFINE(TK)
-test "${clx}" && AC_DEFINE(CLX)
-test "${tcp}" -o "${clx}" && AC_DEFINE(TCP)
-test "${locative}" && AC_DEFINE(LOCATIVE)
-test "${threads}" && AC_DEFINE(THREADS)
-test "${runtime}" && AC_DEFINE(RUNTIME)
-test "${profile}" && AC_DEFINE(PROFILE)
-### ----------------------------------------------------------------------
-###           checks for programs
-CC=gcc		      # We need gcc for variable length arrays
-AC_SUBST(CC)
-AC_ISC_POSIX
+AC_PROG_CC	      # sets variable CC
 AC_PROG_CPP           # sets variable CPP
 AC_PROG_RANLIB        # sets variable RANLIB
 AC_PROG_INSTALL       # sets variables INSTALL, INSTALL_DATA, INSTALL_PROGRAM
@@ -171,78 +106,7 @@ else
  MV="mv"
  RUN="./"
 fi
-
-#### Extract some information from the machine description file.
-#### WARNING: file confdefs.h may depend on version of Autoconf
-
-echo "Extracting parameters from the machine description file"
-
-tempcname="conftest.c"
-
-echo '
-#include "confdefs.h"
-#include "'${srcdir}'/h/machines.h"
-#ifdef CFLAGS
-configure___CFLAGS=CFLAGS
-#endif
-
-#ifdef LSPCFLAGS
-configure___LSPCFLAGS=LSPCFLAGS
-#endif
-
-#ifdef CLIBS
-configure___CLIBS=CLIBS
-#endif
-
-#ifdef LDFLAGS
-configure___LDFLAGS=LDFLAGS
-#endif
-
-#ifdef ILDFLAGS
-configure___ILDFLAGS=ILDFLAGS
-#endif
-
-#ifdef UNEXEC
-configure___UNEXEC=UNEXEC
-#else
-configure___UNEXEC=unixsave
-#endif
-
-#ifdef DLD
-configure___DLD=DLD
-#else
-configure___DLD=dld
-#endif
-
-#ifdef SETJMP
-configure___SETJMP=SETJMP
-#endif
-
-#ifdef _setjmp
-configure____jmp=1
-#endif
-
-configure___architecture=ARCHITECTURE
-configure___software_type=SOFTWARE_TYPE
-configure___software_version=SOFTWARE_VERSION
-' > ${tempcname}
-
-# The value of CPP is a quoted variable reference, so we need to do this
-# to get its actual value...
-CPP=`eval "echo $CPP"`
-eval `${CPP} -D${host} ${tempcname} \
-       | grep 'configure___' \
-       | sed -e 's/^configure___\([^=]*=\)[ ]*\(.*[^ ]\) */\1"\2"/' `
-rm ${tempcname}
-
-test ${SETJMP} && SETJMPO=setjmp.o
-
-CFLAGS="${CFLAGS}"
-CLIBS="${CLIBS} -lm"
 ]
-test "$boehm" && CLIBS="-lgc ${CLIBS}"
-test "${_jmp}" && AC_DEFINE(_setjmp,setjmp)
-test "${_jmp}" && AC_DEFINE(_longjmp,longjmp)
 AC_SUBST(CP)
 AC_SUBST(RM)
 AC_SUBST(MV)
@@ -251,47 +115,99 @@ AC_SUBST(CFLAGS)
 AC_SUBST(LSPCFLAGS)
 AC_SUBST(CLIBS)
 AC_SUBST(LDFLAGS)
-AC_SUBST(ILDFLAGS)
-AC_SUBST(UNEXEC)
-AC_SUBST(DLD)
-AC_SUBST(SETJMP)
-AC_SUBST(SETJMPO)
+AC_SUBST(SHARED_LDFLAGS)
 AC_SUBST(architecture)
 AC_SUBST(software_type)
 AC_SUBST(software_version)
-###
-###           checks for UNIX variants that set DEFS
-###
+
+dnl ----------------------------------------------------------------------
+dnl           checks for UNIX variants that set DEFS
+dnl
 AC_CHECK_LIB(sun, getpwnam)         # on IRIX adds -lsun
-###
-###           checks for header files
-###
+
+dnl ----------------------------------------------------------------------
+dnl           checks for header files
+dnl
 dnl AC_CHECK_HEADERS(unistd.h stdlib.h stdarg.h string.h)
 AC_CHECK_HEADERS(sys/resource.h)
 AC_CHECK_HEADERS(sys/utsname.h)
+AC_CHECK_HEADERS(float.h)
 AC_CHECK_FUNCS(nanosleep)
-###		      # DEFS HAVE_UNISTD_H, HAVE_STDLIB_H, HAVE_STDARG_H
-###		      # and HAVE_STRING_H
+AC_ISC_POSIX
+
+dnl ----------------------------------------------------------------------
+dnl		Establish some default values
+dnl
+ECLS_MAKE_ABSOLUTE_SRCDIR()
+ECLS_GUESS_HOST_OS()
+ECLS_PROCESS_MACHINES_H()
+
+dnl ----------------------------------------------------------------------
+dnl		Set options
+dnl
+[
+if test "x$prefix" = "xNONE"; then prefix=${ac_default_prefix}; fi
+if test "x$exec_prefix" = "xNONE"; then exec_prefix=${prefix}; fi
+bindir="${exec_prefix}/bin"
+libdir="${exec_prefix}/lib/ecls"
+mandir="${prefix}/man/man1"
+infodir="${prefix}/info"
+builddir=`pwd`
+
+if [ $profile ] ; then
+ if [ ${host} = linux ] ; then
+ LIBS="${LIBS} -lgmon"
+ fi
+fi
+if [ $tk ] ; then
+ TKLIBS="-ltk -ltcl -lXpm @XLIBS@"
+fi
+]
+CLIBS="${CLIBS} -lm"
+test "${boehm}" && CLIBS="-lgc ${CLIBS}"
+test "${boehm}" && AC_DEFINE(GBC_BOEHM)
+test "${clos}" && AC_DEFINE(CLOS)
+test "${tk}" && AC_DEFINE(TK)
+test "${clx}" && AC_DEFINE(CLX)
+test "${tcp}" -o "${clx}" && AC_DEFINE(TCP)
+test "${locative}" && AC_DEFINE(LOCATIVE)
+test "${threads}" && AC_DEFINE(THREADS)
+test "${runtime}" && AC_DEFINE(RUNTIME)
+test "${profile}" && AC_DEFINE(PROFILE)
+
+dnl ----------------------------------------------------------------------
+dnl		Study the call conventions
+dnl
+ECLS_STACK_DIRECTION()
+ECLS_ARGS_ARRAY()
+
+dnl ---------------------------------------------------------------------
+dnl		Check the appropiate type for cl_fixnum/cl_index
+dnl
+ECLS_FIXNUM_TYPE()
+
+dnl		      # DEFS HAVE_UNISTD_H, HAVE_STDLIB_H, HAVE_STDARG_H
+dnl		      # and HAVE_STRING_H
 dnl AC_DIR_HEADER         # directory reading functions, DEFS VOID_CLOSEDIR
-###
-###           checks for typedefs
-###
+dnl
+dnl           checks for typedefs
+dnl
 dnl AC_TYPE_SIZE_T         # DEFS size_t
 dnl AC_TYPE_PID_T          # DEFS pid_t
 dnl AC_TYPE_UID_T          # DEFS uid_t, gid_t
 dnl AC_TYPE_OFF_T	   # DEFS off_t
-###
-###           checks for functions and declarations
-###
-###           checks for compiler characteristics
-###
-dnl Removed in Autoconf-2: AC_ARG_ARRAY               # DEFS NO_ARG_ARRAY
+dnl
+dnl           checks for functions and declarations
+dnl
+dnl           checks for compiler characteristics
+dnl
 AC_C_BIGENDIAN    	   # DEFS WORDS_BIGENDIAN
 dnl AC_C_CONST             # DEFS const
 dnl AC_C_CHAR_UNSIGNED     # DEFS __CHAR_UNSIGNED__ if char is unsigned
-###
-###	      X11 stuff
-###
+
+dnl ---------------------------------------------------------------------
+dnl	      X11 stuff
+dnl
 AC_PATH_X
 AC_PATH_XTRA
  
@@ -312,23 +228,27 @@ AC_SUBST(XINCLUDES)
 AC_SUBST(XLIBS)
 
 XLIBS="$XLIBS $X_PRE_LIBS -lX11 $X_EXTRA_LIBS"
-###
-###		Subsystems
-###
+
+dnl ---------------------------------------------------------------------
+dnl		GNU multiprecision library
+dnl
 echo -n "checking for gmp..."
 if test "$enable_local_gmp" = "yes"; then
 AC_DEFINE(HAVE_LOCAL_GMP)
 echo "use local $enable_local_gmp"
 else
-AC_CONFIG_SUBDIRS(gmp)
-echo "use provided"
+echo "configuring gmp"
+$srcdir/gmp/configure $gmp_flags
 fi
 CLIBS="-lgmp ${CLIBS}"
-###
+
+dnl ---------------------------------------------------------------------
+dnl		Final pass over configuration files
+dnl
 AC_OUTPUT(h/config.h compile.lsp compile2.lsp compile_rest.lsp bare.lsp
  lsp/config.lsp cmp/cmpcfg.lsp lsp/load.lsp clos/load.lsp cmp/load.lsp
  ../Makefile Makefile c/Makefile doc/Makefile
- tk/Makeile clx/defsys.lsp tests/Makefile ansi-tests/Makefile gabriel/Makefile
+ tk/Makefile clx/defsys.lsp tests/Makefile ansi-tests/Makefile gabriel/Makefile
  lsp/defsys.lsp cmp/defsys.lsp clos/defsys.lsp gc/Makefile,
 
 # Fix machine dependencies in Makefiles
