--- a/src/configure.in
+++ b/src/configure.in
@@ -84,6 +84,9 @@ dnl 	runtime="$enable_runtime")
 ###           Checks for programs
 ###
 AC_PROG_CC	      # sets variable CC
+if test "$GCC" != "yes"; then
+  AC_MSG_ERROR(Cannot build ECLS without GCC)
+fi
 AC_PROG_CPP           # sets variable CPP
 AC_PROG_RANLIB        # sets variable RANLIB
 AC_PROG_INSTALL       # sets variables INSTALL, INSTALL_DATA, INSTALL_PROGRAM
