Fixnum product would overflow. Bit fiddling operations with negative fixnums now work. Remove unportable code of the type va_list d = cs. Simplify gathering of &rest and &key arguments in compiled code.

--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -17,7 +17,7 @@
  *	OPTIONS								*
  * -------------------------------------------------------------------- */
 
-#undef CLOS
+#define CLOS			/* Always use CLOS			*/
 #undef THREADS
 #undef TK
 
