--- a/src/cmp/cmpcfg.lsp.in
+++ b/src/cmp/cmpcfg.lsp.in
@@ -5,5 +5,6 @@
 (in-package "COMPILER")
 (setq compiler::*cc* "@CC@")
 (setq compiler::*cc-flags* "@CFLAGS@ -D@host@ @LSPCFLAGS@")
-(setq compiler::*ld-flags* "-lecls -lgmp @LDFLAGS@ @CLIBS@")
+(setq compiler::*ld-flags* "-lgmp @LDFLAGS@ @CLIBS@")
+#+dlopen
 (setq compiler::*ld-shared-flags* "@SHARED_LDFLAGS@")
