--- a/src/doc/Makefile.in
+++ b/src/doc/Makefile.in
@@ -57,7 +57,9 @@ benchmark.html: $(srcdir)/benchmark.in.html ../gabriel/BENCHMARK
 	 echo '<pre>'; cat ../gabriel/BENCHMARK; echo '</pre>'; \
 	 cat $(srcdir)/end) | $(FILTER) > $@
 ../gabriel/BENCHMARK:
-	echo '<b>Benchmark not available</b>' > ../gabriel/BENCHMARK
+	cd ../gabriel; \
+	if (which lisp && which clisp) > /dev/null; then make; \
+	else \ echo "No benchmarks available" > BENCHMARK; fi
 license.html: $(top_srcdir)/../Copyright
 	(cat $(srcdir)/head; \
 	 echo '<pre>'; cat $?; echo '</pre>'; \
