Change the interface of C::BUILD-ECLS

--- a/src/compile_rest.lsp.in
+++ b/src/compile_rest.lsp.in
@@ -33,6 +33,6 @@
 (push :clx-ansi-common-lisp *features*)
 (load "defsys.lsp")
 (sbt::operate-on-system clx :library)
-(compiler::build-ecls "eclx" #+WANTS-CMP 'cmp 'clx)
+(compiler::build-ecls "eclx" :components '(#+WANTS-CMP cmp clx))
 )
 
