--- a/src/compile.lsp.in
+++ b/src/compile.lsp.in
@@ -37,6 +37,6 @@
 ;(sbt::operate-on-system clos :load)
 )
 
-(compiler::build-ecls "ecls" #+WANTS-CMP 'cmp)
+(compiler::build-ecls "ecls" :components '(#+WANTS-CMP cmp))
 
 (quit)
