--- a/src/configure.in
+++ b/src/configure.in
@@ -45,32 +45,32 @@ AC_SUBST(infodir)
 AC_SUBST(builddir)
 AC_SUBST(top_srcdir)
 AC_ARG_ENABLE(boehm,
-	AC_HELP_STRING([--disable-boehm],[Disable Boehm's garbage collector.]),
+	[--disable-boehm	Disable Boehm's garbage collector.],
 	boehm="${enableval}", boehm="yes")
 dnl AC_ARG_ENABLE(tk,
-dnl 	AC_HELP_STRING([--enable-tk],[Include Tk.]),
+dnl 	[--enable-tk	Include Tk.],
 dnl 	tk="$enable_tk")
-dnl AC_ARG_ENABLE(clx,
-dnl 	AC_HELP_STRING([--enable-clx],[Include CLX.]),
-dnl 	clx="$enable_clx")
+AC_ARG_ENABLE(clx,
+	[--enable-clx	Include CLX.],
+	clx="$enable_clx")
 AC_ARG_WITH(tcp,
-	AC_HELP_STRING([--with-tcp],[Include socket interface.]),
+	[--with-tcp	Include socket interface.],
 	tcp="yes")
 AC_ARG_ENABLE(gmp,
-	AC_HELP_STRING([--enable-local-gmp],[Use already installed GMP library.]),
+	[--enable-local-gmp	Use already installed GMP library.],
 	gmp="${enableval}")
 AC_ARG_WITH(gmp,
-	AC_HELP_STRING([--with-gmp=args],[Configure supplied GMP library with arguments.]),
+	[--with-gmp=args	Configure supplied GMP library with arguments.],
 	[gmp_flags=$withval; enable_local_gmp=no],
 	gmp_flags="")
 dnl AC_ARG_ENABLE(locative,
-dnl 	AC_HELP_STRING([--enable-locative],[Include locative support.]),
+dnl 	[--enable-locative	Include locative support.],
 dnl 	locative="$enable_locative")
 dnl AC_ARG_ENABLE(threads,
-dnl 	AC_HELP_STRING([--enable-threads],[Include the multiple thread facility.]),
+dnl 	[--enable-threads	Include the multiple thread facility.],
 dnl 	threads="$enable_threads")
 dnl AC_ARG_ENABLE(runtime,
-dnl 	AC_HELP_STRING([--enable-runtime],[Build no compiler.]),
+dnl 	[--enable-runtime	Build no compiler.],
 dnl 	runtime="$enable_runtime")
 
 ### ----------------------------------------------------------------------
@@ -84,6 +84,7 @@ AC_PROG_CPP           # sets variable CPP
 AC_PROG_RANLIB        # sets variable RANLIB
 AC_PROG_INSTALL       # sets variables INSTALL, INSTALL_DATA, INSTALL_PROGRAM
 AC_PROG_LN_S          # sets variable LN_S
+AC_EXEEXT dnl			Guess whether .exe is needed for executables
 AC_SUBST(CFLAGS)dnl		Flags for the compiler
 AC_SUBST(LSPCFLAGS)dnl		Additional flags needed to compile translated code
 AC_SUBST(CLIBS)dnl		System libraries to be linked in
@@ -267,9 +268,8 @@ fi
 dnl ---------------------------------------------------------------------
 dnl		Final pass over configuration files
 dnl
-AC_CONFIG_FILES(compile.lsp compile_rest.lsp bare.lsp
+AC_OUTPUT(compile.lsp compile_rest.lsp bare.lsp
  lsp/config.lsp cmp/cmpcfg.lsp lsp/load.lsp clos/load.lsp cmp/load.lsp
  ../Makefile Makefile c/Makefile doc/Makefile
  tk/Makefile clx/defsys.lsp tests/Makefile ansi-tests/Makefile gabriel/Makefile
  lsp/defsys.lsp cmp/defsys.lsp clos/defsys.lsp)
-AC_OUTPUT
